5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1771_1185.log
== SUBMITION (2019-05-28 22:38:52) 
-- CODE:
from numpy import*
glicose=array(eval(input("digite o numero:")))
i=0
a=0
while(i<size(glicose)):
	if(glicose[i]>99):
		print(i)
		a=a+1
	else:
		a=a+1
	i=i+1
print(w)

-- EXECUTION TIME:
0.347278
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1185/main.py", line 12, in <module>
    print(w)
NameError: name 'w' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:39:13) 
-- CODE:
from numpy import*
glicose=array(eval(input("digite o numero:")))
i=0
a=0
while(i<size(glicose)):
	if(glicose[i]>99):
		print(i)
		a=a+1
	else:
		a=a+1
	i=i+1
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:40:04) 
-- CODE:
from numpy import*
glicose=array(eval(input("digite o numero:")))
i=0
a=0
while(i<size(glicose)):
	if(glicose[i]>99):
		print(i)
		a=a+1
	else:
		a=a+1
	i=i+1
print(a)

-- EXECUTION TIME:
0.372868
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
6
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
10
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:40:20) 
-- CODE:
from numpy import*
glicose=array(eval(input("digite o numero:")))
i=0
a=0
while(i<size(glicose)):
	if(glicose[i]>99):
		print(i)
		a=a+1
	else:
		a=a+1
	i=i+1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:41:23) 
-- CODE:
from numpy import*
glicose=array(eval(input("digite o numero:")))
a=0
i=0
while(i<size(glicose)):
	if(glicose[i]>99):
		print(i)
		a=a+1
	else:
		a=a+1
	i=i+1
print(a)

-- EXECUTION TIME:
0.585583
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
6
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
10
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:41:42) 
-- CODE:
from numpy import*
glicose=array(eval(input("digite o numero:")))
a=0
i=0
while(i<size(glicose)):
	if(glicose[i]>99):
		print(i)
		a=a+1
	else:
		a=a+0
	i=i+1
print(a)

-- EXECUTION TIME:
0.407976
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
